fix newsletter block z-index

--- a/css/visual-style-agence-mobile.css
+++ b/css/visual-style-agence-mobile.css
@@ -843,14 +843,13 @@ h3, h4 {
     background: #1A4BD8;
     font-family: "Poppins", sans-serif;
     height: 100%;
-}
-
-.front .newsletter-form {
     content: "";
     display: table;
     clear: both;
     border-collapse: collapse;
     text-align: center;
+    z-index: 0;
+    position: relative;
 }
 
 .block-page.newsletter-form .box-dark {
